# netbox_netping/pyproject.toml

[project]
name = "netbox-netping"
version = "0.0.1"
description = "Ping prefixes & IPs directly from NetBox (updates status & custom field)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pythonping>=1.1.4",
]
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: Apache Software License",
]

[project.entry-points."netbox.plugins"]
netbox_netping = "netbox_netping.config:NetPingConfig"