# netbox_netping/pyproject.toml
[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox_netping"                       # ← mesmo nome no PyPI
version = "0.1.0"
description = "Minimal NetBox 4.3 plugin that adds a single menu item."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Seu Nome", email = "voce@example.com" }]
license = { text = "MIT" }
classifiers = [
  "Framework :: Django",
  "Framework :: NetBox",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["netbox>=4.3,<4.4"]

[tool.setuptools]
package-dir = { "" = "netbox_netping" }   # aponta para o subdiretório-pacote
packages = ["netbox_netping"]             # inclui somente o plugin
